# qscaler-python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  makefile  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  release-please.yaml  release.yaml
.mirrord/: mirrord.json
examples/: Dockerfile  gamba_client.py  gamba_worker.py  qworker.yaml  worker.py
gamba/brokers/: broker.py  brokers_factory.py  redis_broker.py
gamba/client/: client.py
gamba/configuration/: config.py
gamba/pkg/brokers/: broker.py  brokers_factory.py  redis_broker.py
gamba/pkg/client/: client.py
gamba/pkg/configuration/: config.py
gamba/pkg/event_loop/: event_loop.py
gamba/pkg/results_storage/: redis_results_storage.py  results_storage.py  results_storage_factory.py
gamba/pkg/utils/: singleton.py
gamba/pkg/worker/: worker.py
gamba/results_storage/: redis_results_storage.py  results_storage.py  results_storage_factory.py
gamba/worker/: worker.py
qscaler/: worker.py
qscaler/brokers/: broker.py  brokers_factory.py  redis_broker.py
qscaler/configuration/: config.py
qscaler/event_loop/: event_loop.py  event_loop_test.py
qscaler/k8s/: k8s_client.py  k8s_client_test.py
qscaler/models/: qworker.py  qworker_test.py  scaler_config.py  scaler_config_test.py
qscaler_sdk/: worker.py
qscaler_sdk/brokers/: broker.py  brokers_factory.py  redis_broker.py
qscaler_sdk/configuration/: config.py
qscaler_sdk/event_loop/: event_loop.py  event_loop_test.py
qscaler_sdk/k8s/: k8s_client.py  k8s_client_test.py  models.py  qworker.py  scaler_config.py
qscaler_sdk/models/: qworker.py  qworker_test.py  scaler_config.py
qscaler_sdk/worker/: worker.py  worker_test.py
tests/: conftest.py  k8s_client_test.py  qworker_test.py  scaler_config_test.py
