[tool.poetry]
name = "qscaler-sdk"
version = "0.1.0"
description = ""
authors = ["Omri Assa <omriassa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
tests = 'pytest:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]
exclude = ["build"]