[tool.poetry]
name = "qscaler-sdk"
version = "0.0.1"
description = ""
authors = ["Omri Assa <omriassa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "*"
kubernetes = "^31.0.0"
pydantic = "^2.10.4"


[tool.poetry.scripts]
tests = 'pytest:main'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]
exclude = ["build"]