[tool.poetry]
name = "qscaler"
version = "0.0.2"
description = "Python SDK for QScaler - Kubernetes-native queue worker autoscaler"
authors = ["Quickube"]
readme = "README.md"

exclude = [
    "*_test.py",    # Matches files ending with "_test" in any directory
    "**/*_test.py", # Matches recursively in subdirectories
    "*_tests.py",    # Matches files ending with "_tests" in any directory
    "**/*_tests.py", # Matches recursively in subdirectories
]

[tool.poetry.dependencies]
python = "^3.11"
redis = "*"
kubernetes = "^31.0.0"
pydantic = "^2.10.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F"]
lint.ignore = ["E501"]
exclude = ["build"]
